5.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite-svc
spec:
  type: ClusterIP
  selector:
    app: dummysite-controller
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
